parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programs
Rule 1     programs -> program
Rule 2     programs -> program programs
Rule 3     program -> class
Rule 4     program -> statement
Rule 5     class -> ACCESS CLASS IDENTIFIER LBRACE stats RBRACE
Rule 6     this_assign -> THIS IDENTIFIER ASSIGN IDENTIFIER SEMICOLON
Rule 7     stats -> stat
Rule 8     stats -> stat stats
Rule 9     stat -> constructor
Rule 10    stat -> statement
Rule 11    constructor -> ACCESS IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE
Rule 12    constructor -> ACCESS IDENTIFIER LPAREN RPAREN LBRACE statements RBRACE
Rule 13    function -> RETURNTYPE IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE
Rule 14    function -> RETURNTYPE IDENTIFIER LPAREN RPAREN LBRACE statements RBRACE
Rule 15    function -> ACCESS RETURNTYPE IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE
Rule 16    function -> ACCESS RETURNTYPE IDENTIFIER LPAREN RPAREN LBRACE statements RBRACE
Rule 17    function -> STATIC RETURNTYPE IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE
Rule 18    function -> STATIC RETURNTYPE IDENTIFIER LPAREN RPAREN LBRACE statements RBRACE
Rule 19    function -> ACCESS STATIC RETURNTYPE IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE
Rule 20    function -> ACCESS STATIC RETURNTYPE IDENTIFIER LPAREN RPAREN LBRACE statements RBRACE
Rule 21    parameters -> parameter
Rule 22    parameters -> parameter COMMA parameters
Rule 23    parameter -> RETURNTYPE IDENTIFIER
Rule 24    parameter -> RETURNTYPE LBRACKET RBRACKET IDENTIFIER
Rule 25    statements -> statement
Rule 26    statements -> statement statements
Rule 27    function_call -> IDENTIFIER LPAREN params RPAREN SEMICOLON
Rule 28    function_call -> IDENTIFIER LPAREN RPAREN SEMICOLON
Rule 29    statement -> assignment_statement
Rule 30    statement -> class_statement
Rule 31    statement -> print_statement
Rule 32    statement -> this_assign
Rule 33    statement -> switch
Rule 34    statement -> return
Rule 35    statement -> while
Rule 36    statement -> for
Rule 37    statement -> try_catch
Rule 38    statement -> PASS SEMICOLON
Rule 39    statement -> ACCESS assignment_statement
Rule 40    statement -> function
Rule 41    statement -> function_call
Rule 42    statement -> ifblock
Rule 43    statement -> BREAK SEMICOLON
Rule 44    switch -> SWITCH LPAREN IDENTIFIER RPAREN LBRACE cases RBRACE
Rule 45    cases -> case
Rule 46    cases -> case cases
Rule 47    case -> CASE NUMBER COLON statements
Rule 48    case -> DEFAULT COLON statements
Rule 49    while -> WHILE LPAREN params RPAREN LBRACE statements RBRACE
Rule 50    params -> param
Rule 51    params -> param LOGICAL params
Rule 52    param -> IDENTIFIER
Rule 53    param -> NUMBER
Rule 54    class_statement -> IDENTIFIER IDENTIFIER SEMICOLON
Rule 55    class_statement -> IDENTIFIER IDENTIFIER ASSIGN NEW IDENTIFIER LPAREN RPAREN SEMICOLON
Rule 56    class_statement -> IDENTIFIER IDENTIFIER ASSIGN NEW IDENTIFIER LBRACKET RBRACKET SEMICOLON
Rule 57    class_statement -> IDENTIFIER IDENTIFIER ASSIGN NEW IDENTIFIER LPAREN params RPAREN SEMICOLON
Rule 58    class_statement -> IDENTIFIER IDENTIFIER ASSIGN NEW IDENTIFIER LBRACKET NUMBER RBRACKET SEMICOLON
Rule 59    assignment_statement -> RETURNTYPE IDENTIFIER ASSIGN expression SEMICOLON
Rule 60    assignment_statement -> RETURNTYPE IDENTIFIER SEMICOLON
Rule 61    assignment_statement -> RETURNTYPE IDENTIFIER PLUS ASSIGN expression SEMICOLON
Rule 62    assignment_statement -> RETURNTYPE IDENTIFIER MINUS ASSIGN expression SEMICOLON
Rule 63    assignment_statement -> RETURNTYPE IDENTIFIER TIMES ASSIGN expression SEMICOLON
Rule 64    assignment_statement -> RETURNTYPE IDENTIFIER DIVIDE ASSIGN expression SEMICOLON
Rule 65    assignment_statement -> RETURNTYPE IDENTIFIER PLUS PLUS SEMICOLON
Rule 66    assignment_statement -> IDENTIFIER ASSIGN expression SEMICOLON
Rule 67    assignment_statement -> IDENTIFIER PLUS ASSIGN expression SEMICOLON
Rule 68    assignment_statement -> IDENTIFIER MINUS ASSIGN expression SEMICOLON
Rule 69    assignment_statement -> IDENTIFIER TIMES ASSIGN expression SEMICOLON
Rule 70    assignment_statement -> IDENTIFIER DIVIDE ASSIGN expression SEMICOLON
Rule 71    assignment_statement -> IDENTIFIER PLUS PLUS SEMICOLON
Rule 72    assignment_statement -> IDENTIFIER MINUS MINUS SEMICOLON
Rule 73    assignment_statement -> PLUS PLUS IDENTIFIER SEMICOLON
Rule 74    assignment_statement -> MINUS MINUS IDENTIFIER SEMICOLON
Rule 75    assignment_statement -> RETURNTYPE IDENTIFIER LBRACKET RBRACKET ASSIGN LBRACE items RBRACE SEMICOLON
Rule 76    assignment_statement -> RETURNTYPE LBRACKET RBRACKET IDENTIFIER ASSIGN LBRACE items RBRACE SEMICOLON
Rule 77    assignment_statement -> IDENTIFIER LBRACKET expression RBRACKET ASSIGN expression SEMICOLON
Rule 78    assignment_statement -> IDENTIFIER LBRACKET expression RBRACKET ASSIGN LBRACE items RBRACE SEMICOLON
Rule 79    assignment_statement -> IDENTIFIER LBRACKET RBRACKET ASSIGN LBRACE items RBRACE SEMICOLON
Rule 80    assignment_statement -> RETURNTYPE IDENTIFIER LBRACKET RBRACKET ASSIGN NEW RETURNTYPE LBRACKET NUMBER RBRACKET SEMICOLON
Rule 81    assignment_statement -> RETURNTYPE IDENTIFIER LBRACKET RBRACKET ASSIGN NEW RETURNTYPE LBRACKET RBRACKET SEMICOLON
Rule 82    print_statement -> SOP LPAREN expression RPAREN SEMICOLON
Rule 83    print_statement -> SOP LPAREN RPAREN SEMICOLON
Rule 84    expression -> IDENTIFIER
Rule 85    expression -> NUMBER
Rule 86    expression -> expression PLUS
Rule 87    expression -> expression MINUS
Rule 88    expression -> expression PLUS expression
Rule 89    expression -> expression MINUS expression
Rule 90    expression -> expression TIMES expression
Rule 91    expression -> expression DIVIDE expression
Rule 92    expression -> STRING
Rule 93    expression -> CHAR
Rule 94    return -> RETURN IDENTIFIER SEMICOLON
Rule 95    return -> RETURN SEMICOLON
Rule 96    return -> RETURN expression SEMICOLON
Rule 97    items -> item
Rule 98    items -> item COMMA items
Rule 99    item -> NUMBER
Rule 100   item -> CHAR
Rule 101   ifblock -> if
Rule 102   ifblock -> if else
Rule 103   ifblock -> if else_if
Rule 104   if -> IF LPAREN params RPAREN LBRACE statements RBRACE
Rule 105   else -> ELSE LBRACE statements RBRACE
Rule 106   else_if -> ELSE if
Rule 107   else_if -> ELSE if else_if
Rule 108   else_if -> ELSE if else
Rule 109   for -> FOR LPAREN assignment_statement params SEMICOLON increment RPAREN LBRACE statements RBRACE
Rule 110   increment -> PLUS PLUS IDENTIFIER
Rule 111   increment -> MINUS MINUS IDENTIFIER
Rule 112   increment -> IDENTIFIER PLUS PLUS
Rule 113   increment -> IDENTIFIER MINUS MINUS
Rule 114   try_catch -> TRY LBRACE statements RBRACE CATCH LPAREN IDENTIFIER IDENTIFIER RPAREN LBRACE statements RBRACE
Rule 115   try_catch -> TRY LBRACE statements RBRACE CATCH LPAREN IDENTIFIER IDENTIFIER RPAREN LBRACE statements RBRACE FINALLY LBRACE statements RBRACE

Terminals, with rules where they appear

ACCESS               : 5 11 12 15 16 19 20 39
ASSIGN               : 6 55 56 57 58 59 61 62 63 64 66 67 68 69 70 75 76 77 78 79 80 81
BREAK                : 43
CASE                 : 47
CATCH                : 114 115
CHAR                 : 93 100
CLASS                : 5
COLON                : 47 48
COMMA                : 22 98
DEFAULT              : 48
DIVIDE               : 64 70 91
ELSE                 : 105 106 107 108
FINALLY              : 115
FOR                  : 109
IDENTIFIER           : 5 6 6 11 12 13 14 15 16 17 18 19 20 23 24 27 28 44 52 54 54 55 55 55 56 56 56 57 57 57 58 58 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 84 94 110 111 112 113 114 114 115 115
IF                   : 104
LBRACE               : 5 11 12 13 14 15 16 17 18 19 20 44 49 75 76 78 79 104 105 109 114 114 115 115 115
LBRACKET             : 24 56 58 75 76 77 78 79 80 80 81 81
LOGICAL              : 51
LPAREN               : 11 12 13 14 15 16 17 18 19 20 27 28 44 49 55 57 82 83 104 109 114 115
MINUS                : 62 68 72 72 74 74 87 89 111 111 113 113
NEW                  : 55 56 57 58 80 81
NUMBER               : 47 53 58 80 85 99
PASS                 : 38
PLUS                 : 61 65 65 67 71 71 73 73 86 88 110 110 112 112
RBRACE               : 5 11 12 13 14 15 16 17 18 19 20 44 49 75 76 78 79 104 105 109 114 114 115 115 115
RBRACKET             : 24 56 58 75 76 77 78 79 80 80 81 81
RETURN               : 94 95 96
RETURNTYPE           : 13 14 15 16 17 18 19 20 23 24 59 60 61 62 63 64 65 75 76 80 80 81 81
RPAREN               : 11 12 13 14 15 16 17 18 19 20 27 28 44 49 55 57 82 83 104 109 114 115
SEMICOLON            : 6 27 28 38 43 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 94 95 96 109
SOP                  : 82 83
STATIC               : 17 18 19 20
STRING               : 92
SWITCH               : 44
THIS                 : 6
TIMES                : 63 69 90
TRY                  : 114 115
WHILE                : 49
error                : 

Nonterminals, with rules where they appear

assignment_statement : 29 39 109
case                 : 45 46
cases                : 44 46
class                : 3
class_statement      : 30
constructor          : 9
else                 : 102 108
else_if              : 103 107
expression           : 59 61 62 63 64 66 67 68 69 70 77 77 78 82 86 87 88 88 89 89 90 90 91 91 96
for                  : 36
function             : 40
function_call        : 41
if                   : 101 102 103 106 107 108
ifblock              : 42
increment            : 109
item                 : 97 98
items                : 75 76 78 79 98
param                : 50 51
parameter            : 21 22
parameters           : 11 13 15 17 19 22
params               : 27 49 51 57 104 109
print_statement      : 31
program              : 1 2
programs             : 2 0
return               : 34
stat                 : 7 8
statement            : 4 10 25 26
statements           : 11 12 13 14 15 16 17 18 19 20 26 47 48 49 104 105 109 114 114 115 115 115
stats                : 5 8
switch               : 33
this_assign          : 32
try_catch            : 37
while                : 35

Parsing method: LALR

state 0

    (0) S' -> . programs
    (1) programs -> . program
    (2) programs -> . program programs
    (3) program -> . class
    (4) program -> . statement
    (5) class -> . ACCESS CLASS IDENTIFIER LBRACE stats RBRACE
    (29) statement -> . assignment_statement
    (30) statement -> . class_statement
    (31) statement -> . print_statement
    (32) statement -> . this_assign
    (33) statement -> . switch
    (34) statement -> . return
    (35) statement -> . while
    (36) statement -> . for
    (37) statement -> . try_catch
    (38) statement -> . PASS SEMICOLON
    (39) statement -> . ACCESS assignment_statement
    (40) statement -> . function
    (41) statement -> . function_call
    (42) statement -> . ifblock
    (43) statement -> . BREAK SEMICOLON
    (59) assignment_statement -> . RETURNTYPE IDENTIFIER ASSIGN expression SEMICOLON
    (60) assignment_statement -> . RETURNTYPE IDENTIFIER SEMICOLON
    (61) assignment_statement -> . RETURNTYPE IDENTIFIER PLUS ASSIGN expression SEMICOLON
    (62) assignment_statement -> . RETURNTYPE IDENTIFIER MINUS ASSIGN expression SEMICOLON
    (63) assignment_statement -> . RETURNTYPE IDENTIFIER TIMES ASSIGN expression SEMICOLON
    (64) assignment_statement -> . RETURNTYPE IDENTIFIER DIVIDE ASSIGN expression SEMICOLON
    (65) assignment_statement -> . RETURNTYPE IDENTIFIER PLUS PLUS SEMICOLON
    (66) assignment_statement -> . IDENTIFIER ASSIGN expression SEMICOLON
    (67) assignment_statement -> . IDENTIFIER PLUS ASSIGN expression SEMICOLON
    (68) assignment_statement -> . IDENTIFIER MINUS ASSIGN expression SEMICOLON
    (69) assignment_statement -> . IDENTIFIER TIMES ASSIGN expression SEMICOLON
    (70) assignment_statement -> . IDENTIFIER DIVIDE ASSIGN expression SEMICOLON
    (71) assignment_statement -> . IDENTIFIER PLUS PLUS SEMICOLON
    (72) assignment_statement -> . IDENTIFIER MINUS MINUS SEMICOLON
    (73) assignment_statement -> . PLUS PLUS IDENTIFIER SEMICOLON
    (74) assignment_statement -> . MINUS MINUS IDENTIFIER SEMICOLON
    (75) assignment_statement -> . RETURNTYPE IDENTIFIER LBRACKET RBRACKET ASSIGN LBRACE items RBRACE SEMICOLON
    (76) assignment_statement -> . RETURNTYPE LBRACKET RBRACKET IDENTIFIER ASSIGN LBRACE items RBRACE SEMICOLON
    (77) assignment_statement -> . IDENTIFIER LBRACKET expression RBRACKET ASSIGN expression SEMICOLON
    (78) assignment_statement -> . IDENTIFIER LBRACKET expression RBRACKET ASSIGN LBRACE items RBRACE SEMICOLON
    (79) assignment_statement -> . IDENTIFIER LBRACKET RBRACKET ASSIGN LBRACE items RBRACE SEMICOLON
    (80) assignment_statement -> . RETURNTYPE IDENTIFIER LBRACKET RBRACKET ASSIGN NEW RETURNTYPE LBRACKET NUMBER RBRACKET SEMICOLON
    (81) assignment_statement -> . RETURNTYPE IDENTIFIER LBRACKET RBRACKET ASSIGN NEW RETURNTYPE LBRACKET RBRACKET SEMICOLON
    (54) class_statement -> . IDENTIFIER IDENTIFIER SEMICOLON
    (55) class_statement -> . IDENTIFIER IDENTIFIER ASSIGN NEW IDENTIFIER LPAREN RPAREN SEMICOLON
    (56) class_statement -> . IDENTIFIER IDENTIFIER ASSIGN NEW IDENTIFIER LBRACKET RBRACKET SEMICOLON
    (57) class_statement -> . IDENTIFIER IDENTIFIER ASSIGN NEW IDENTIFIER LPAREN params RPAREN SEMICOLON
    (58) class_statement -> . IDENTIFIER IDENTIFIER ASSIGN NEW IDENTIFIER LBRACKET NUMBER RBRACKET SEMICOLON
    (82) print_statement -> . SOP LPAREN expression RPAREN SEMICOLON
    (83) print_statement -> . SOP LPAREN RPAREN SEMICOLON
    (6) this_assign -> . THIS IDENTIFIER ASSIGN IDENTIFIER SEMICOLON
    (44) switch -> . SWITCH LPAREN IDENTIFIER RPAREN LBRACE cases RBRACE
    (94) return -> . RETURN IDENTIFIER SEMICOLON
    (95) return -> . RETURN SEMICOLON
    (96) return -> . RETURN expression SEMICOLON
    (49) while -> . WHILE LPAREN params RPAREN LBRACE statements RBRACE
    (109) for -> . FOR LPAREN assignment_statement params SEMICOLON increment RPAREN LBRACE statements RBRACE
    (114) try_catch -> . TRY LBRACE statements RBRACE CATCH LPAREN IDENTIFIER IDENTIFIER RPAREN LBRACE statements RBRACE
    (115) try_catch -> . TRY LBRACE statements RBRACE CATCH LPAREN IDENTIFIER IDENTIFIER RPAREN LBRACE statements RBRACE FINALLY LBRACE statements RBRACE
    (13) function -> . RETURNTYPE IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE
    (14) function -> . RETURNTYPE IDENTIFIER LPAREN RPAREN LBRACE statements RBRACE
    (15) function -> . ACCESS RETURNTYPE IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE
    (16) function -> . ACCESS RETURNTYPE IDENTIFIER LPAREN RPAREN LBRACE statements RBRACE
    (17) function -> . STATIC RETURNTYPE IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE
    (18) function -> . STATIC RETURNTYPE IDENTIFIER LPAREN RPAREN LBRACE statements RBRACE
    (19) function -> . ACCESS STATIC RETURNTYPE IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE
    (20) function -> . ACCESS STATIC RETURNTYPE IDENTIFIER LPAREN RPAREN LBRACE statements RBRACE
    (27) function_call -> . IDENTIFIER LPAREN params RPAREN SEMICOLON
    (28) function_call -> . IDENTIFIER LPAREN RPAREN SEMICOLON
    (101) ifblock -> . if
    (102) ifblock -> . if else
    (103) ifblock -> . if else_if
    (104) if -> . IF LPAREN params RPAREN LBRACE statements RBRACE

    ACCESS          shift and go to state 5
    PASS            shift and go to state 16
    BREAK           shift and go to state 20
    RETURNTYPE      shift and go to state 21
    IDENTIFIER      shift and go to state 6
    PLUS            shift and go to state 22
    MINUS           shift and go to state 23
    SOP             shift and go to state 24
    THIS            shift and go to state 25
    SWITCH          shift and go to state 26
    RETURN          shift and go to state 27
    WHILE           shift and go to state 28
    FOR             shift and go to state 29
    TRY             shift and go to state 30
    STATIC          shift and go to state 31
    IF              shift and go to state 33

    programs                       shift and go to state 1
    program                        shift and go to state 2
    class                          shift and go to state 3
    statement                      shift and go to state 4
    assignment_statement           shift and go to state 7
    class_statement                shift and go to state 8
    print_statement                shift and go to state 9
    this_assign                    shift and go to state 10
    switch                         shift and go to state 11
    return                         shift and go to state 12
    while                          shift and go to state 13
    for                            shift and go to state 14
    try_catch                      shift and go to state 15
    function                       shift and go to state 17
    function_call                  shift and go to state 18
    ifblock                        shift and go to state 19
    if                             shift and go to state 32

state 1

    (0) S' -> programs .



state 2

    (1) programs -> program .
    (2) programs -> program . programs
    (1) programs -> . program
    (2) programs -> . program programs
    (3) program -> . class
    (4) program -> . statement
    (5) class -> . ACCESS CLASS IDENTIFIER LBRACE stats RBRACE
    (29) statement -> . assignment_statement
    (30) statement -> . class_statement
    (31) statement -> . print_statement
    (32) statement -> . this_assign
    (33) statement -> . switch
    (34) statement -> . return
    (35) statement -> . while
    (36) statement -> . for
    (37) statement -> . try_catch
    (38) statement -> . PASS SEMICOLON
    (39) statement -> . ACCESS assignment_statement
    (40) statement -> . function
    (41) statement -> . function_call
    (42) statement -> . ifblock
    (43) statement -> . BREAK SEMICOLON
    (59) assignment_statement -> . RETURNTYPE IDENTIFIER ASSIGN expression SEMICOLON
    (60) assignment_statement -> . RETURNTYPE IDENTIFIER SEMICOLON
    (61) assignment_statement -> . RETURNTYPE IDENTIFIER PLUS ASSIGN expression SEMICOLON
    (62) assignment_statement -> . RETURNTYPE IDENTIFIER MINUS ASSIGN expression SEMICOLON
    (63) assignment_statement -> . RETURNTYPE IDENTIFIER TIMES ASSIGN expression SEMICOLON
    (64) assignment_statement -> . RETURNTYPE IDENTIFIER DIVIDE ASSIGN expression SEMICOLON
    (65) assignment_statement -> . RETURNTYPE IDENTIFIER PLUS PLUS SEMICOLON
    (66) assignment_statement -> . IDENTIFIER ASSIGN expression SEMICOLON
    (67) assignment_statement -> . IDENTIFIER PLUS ASSIGN expression SEMICOLON
    (68) assignment_statement -> . IDENTIFIER MINUS ASSIGN expression SEMICOLON
    (69) assignment_statement -> . IDENTIFIER TIMES ASSIGN expression SEMICOLON
    (70) assignment_statement -> . IDENTIFIER DIVIDE ASSIGN expression SEMICOLON
    (71) assignment_statement -> . IDENTIFIER PLUS PLUS SEMICOLON
    (72) assignment_statement -> . IDENTIFIER MINUS MINUS SEMICOLON
    (73) assignment_statement -> . PLUS PLUS IDENTIFIER SEMICOLON
    (74) assignment_statement -> . MINUS MINUS IDENTIFIER SEMICOLON
    (75) assignment_statement -> . RETURNTYPE IDENTIFIER LBRACKET RBRACKET ASSIGN LBRACE items RBRACE SEMICOLON
    (76) assignment_statement -> . RETURNTYPE LBRACKET RBRACKET IDENTIFIER ASSIGN LBRACE items RBRACE SEMICOLON
    (77) assignment_statement -> . IDENTIFIER LBRACKET expression RBRACKET ASSIGN expression SEMICOLON
    (78) assignment_statement -> . IDENTIFIER LBRACKET expression RBRACKET ASSIGN LBRACE items RBRACE SEMICOLON
    (79) assignment_statement -> . IDENTIFIER LBRACKET RBRACKET ASSIGN LBRACE items RBRACE SEMICOLON
    (80) assignment_statement -> . RETURNTYPE IDENTIFIER LBRACKET RBRACKET ASSIGN NEW RETURNTYPE LBRACKET NUMBER RBRACKET SEMICOLON
    (81) assignment_statement -> . RETURNTYPE IDENTIFIER LBRACKET RBRACKET ASSIGN NEW RETURNTYPE LBRACKET RBRACKET SEMICOLON
    (54) class_statement -> . IDENTIFIER IDENTIFIER SEMICOLON
    (55) class_statement -> . IDENTIFIER IDENTIFIER ASSIGN NEW IDENTIFIER LPAREN RPAREN SEMICOLON
    (56) class_statement -> . IDENTIFIER IDENTIFIER ASSIGN NEW IDENTIFIER LBRACKET RBRACKET SEMICOLON
    (57) class_statement -> . IDENTIFIER IDENTIFIER ASSIGN NEW IDENTIFIER LPAREN params RPAREN SEMICOLON
    (58) class_statement -> . IDENTIFIER IDENTIFIER ASSIGN NEW IDENTIFIER LBRACKET NUMBER RBRACKET SEMICOLON
    (82) print_statement -> . SOP LPAREN expression RPAREN SEMICOLON
    (83) print_statement -> . SOP LPAREN RPAREN SEMICOLON
    (6) this_assign -> . THIS IDENTIFIER ASSIGN IDENTIFIER SEMICOLON
    (44) switch -> . SWITCH LPAREN IDENTIFIER RPAREN LBRACE cases RBRACE
    (94) return -> . RETURN IDENTIFIER SEMICOLON
    (95) return -> . RETURN SEMICOLON
    (96) return -> . RETURN expression SEMICOLON
    (49) while -> . WHILE LPAREN params RPAREN LBRACE statements RBRACE
    (109) for -> . FOR LPAREN assignment_statement params SEMICOLON increment RPAREN LBRACE statements RBRACE
    (114) try_catch -> . TRY LBRACE statements RBRACE CATCH LPAREN IDENTIFIER IDENTIFIER RPAREN LBRACE statements RBRACE
    (115) try_catch -> . TRY LBRACE statements RBRACE CATCH LPAREN IDENTIFIER IDENTIFIER RPAREN LBRACE statements RBRACE FINALLY LBRACE statements RBRACE
    (13) function -> . RETURNTYPE IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE
    (14) function -> . RETURNTYPE IDENTIFIER LPAREN RPAREN LBRACE statements RBRACE
    (15) function -> . ACCESS RETURNTYPE IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE
    (16) function -> . ACCESS RETURNTYPE IDENTIFIER LPAREN RPAREN LBRACE statements RBRACE
    (17) function -> . STATIC RETURNTYPE IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE
    (18) function -> . STATIC RETURNTYPE IDENTIFIER LPAREN RPAREN LBRACE statements RBRACE
    (19) function -> . ACCESS STATIC RETURNTYPE IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE
    (20) function -> . ACCESS STATIC RETURNTYPE IDENTIFIER LPAREN RPAREN LBRACE statements RBRACE
    (27) function_call -> . IDENTIFIER LPAREN params RPAREN SEMICOLON
    (28) function_call -> . IDENTIFIER LPAREN RPAREN SEMICOLON
    (101) ifblock -> . if
    (102) ifblock -> . if else
    (103) ifblock -> . if else_if
    (104) if -> . IF LPAREN params RPAREN LBRACE statements RBRACE

    $end            reduce using rule 1 (programs -> program .)
    ACCESS          shift and go to state 5
    PASS            shift and go to state 16
    BREAK           shift and go to state 20
    RETURNTYPE      shift and go to state 21
    IDENTIFIER      shift and go to state 6
    PLUS            shift and go to state 22
    MINUS           shift and go to state 23
    SOP             shift and go to state 24
    THIS            shift and go to state 25
    SWITCH          shift and go to state 26
    RETURN          shift and go to state 27
    WHILE           shift and go to state 28
    FOR             shift and go to state 29
    TRY             shift and go to state 30
    STATIC          shift and go to state 31
    IF              shift and go to state 33

    program                        shift and go to state 2
    programs                       shift and go to state 34
    class                          shift and go to state 3
    statement                      shift and go to state 4
    assignment_statement           shift and go to state 7
    class_statement                shift and go to state 8
    print_statement                shift and go to state 9
    this_assign                    shift and go to state 10
    switch                         shift and go to state 11
    return                         shift and go to state 12
    while                          shift and go to state 13
    for                            shift and go to state 14
    try_catch                      shift and go to state 15
    function                       shift and go to state 17
    function_call                  shift and go to state 18
    ifblock                        shift and go to state 19
    if                             shift and go to state 32

state 3

    (3) program -> class .

    ACCESS          reduce using rule 3 (program -> class .)
    PASS            reduce using rule 3 (program -> class .)
    BREAK           reduce using rule 3 (program -> class .)
    RETURNTYPE      reduce using rule 3 (program -> class .)
    IDENTIFIER      reduce using rule 3 (program -> class .)
    PLUS            reduce using rule 3 (program -> class .)
    MINUS           reduce using rule 3 (program -> class .)
    SOP             reduce using rule 3 (program -> class .)
    THIS            reduce using rule 3 (program -> class .)
    SWITCH          reduce using rule 3 (program -> class .)
    RETURN          reduce using rule 3 (program -> class .)
    WHILE           reduce using rule 3 (program -> class .)
    FOR             reduce using rule 3 (program -> class .)
    TRY             reduce using rule 3 (program -> class .)
    STATIC          reduce using rule 3 (program -> class .)
    IF              reduce using rule 3 (program -> class .)
    $end            reduce using rule 3 (program -> class .)


state 4

    (4) program -> statement .

    ACCESS          reduce using rule 4 (program -> statement .)
    PASS            reduce using rule 4 (program -> statement .)
    BREAK           reduce using rule 4 (program -> statement .)
    RETURNTYPE      reduce using rule 4 (program -> statement .)
    IDENTIFIER      reduce using rule 4 (program -> statement .)
    PLUS            reduce using rule 4 (program -> statement .)
    MINUS           reduce using rule 4 (program -> statement .)
    SOP             reduce using rule 4 (program -> statement .)
    THIS            reduce using rule 4 (program -> statement .)
    SWITCH          reduce using rule 4 (program -> statement .)
    RETURN          reduce using rule 4 (program -> statement .)
    WHILE           reduce using rule 4 (program -> statement .)
    FOR             reduce using rule 4 (program -> statement .)
    TRY             reduce using rule 4 (program -> statement .)
    STATIC          reduce using rule 4 (program -> statement .)
    IF              reduce using rule 4 (program -> statement .)
    $end            reduce using rule 4 (program -> statement .)


state 5

    (5) class -> ACCESS . CLASS IDENTIFIER LBRACE stats RBRACE
    (39) statement -> ACCESS . assignment_statement
    (15) function -> ACCESS . RETURNTYPE IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE
    (16) function -> ACCESS . RETURNTYPE IDENTIFIER LPAREN RPAREN LBRACE statements RBRACE
    (19) function -> ACCESS . STATIC RETURNTYPE IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE
    (20) function -> ACCESS . STATIC RETURNTYPE IDENTIFIER LPAREN RPAREN LBRACE statements RBRACE
    (59) assignment_statement -> . RETURNTYPE IDENTIFIER ASSIGN expression SEMICOLON
    (60) assignment_statement -> . RETURNTYPE IDENTIFIER SEMICOLON
    (61) assignment_statement -> . RETURNTYPE IDENTIFIER PLUS ASSIGN expression SEMICOLON
    (62) assignment_statement -> . RETURNTYPE IDENTIFIER MINUS ASSIGN expression SEMICOLON
    (63) assignment_statement -> . RETURNTYPE IDENTIFIER TIMES ASSIGN expression SEMICOLON
    (64) assignment_statement -> . RETURNTYPE IDENTIFIER DIVIDE ASSIGN expression SEMICOLON
    (65) assignment_statement -> . RETURNTYPE IDENTIFIER PLUS PLUS SEMICOLON
    (66) assignment_statement -> . IDENTIFIER ASSIGN expression SEMICOLON
    (67) assignment_statement -> . IDENTIFIER PLUS ASSIGN expression SEMICOLON
    (68) assignment_statement -> . IDENTIFIER MINUS ASSIGN expression SEMICOLON
    (69) assignment_statement -> . IDENTIFIER TIMES ASSIGN expression SEMICOLON
    (70) assignment_statement -> . IDENTIFIER DIVIDE ASSIGN expression SEMICOLON
    (71) assignment_statement -> . IDENTIFIER PLUS PLUS SEMICOLON
    (72) assignment_statement -> . IDENTIFIER MINUS MINUS SEMICOLON
    (73) assignment_statement -> . PLUS PLUS IDENTIFIER SEMICOLON
    (74) assignment_statement -> . MINUS MINUS IDENTIFIER SEMICOLON
    (75) assignment_statement -> . RETURNTYPE IDENTIFIER LBRACKET RBRACKET ASSIGN LBRACE items RBRACE SEMICOLON
    (76) assignment_statement -> . RETURNTYPE LBRACKET RBRACKET IDENTIFIER ASSIGN LBRACE items RBRACE SEMICOLON
    (77) assignment_statement -> . IDENTIFIER LBRACKET expression RBRACKET ASSIGN expression SEMICOLON
    (78) assignment_statement -> . IDENTIFIER LBRACKET expression RBRACKET ASSIGN LBRACE items RBRACE SEMICOLON
    (79) assignment_statement -> . IDENTIFIER LBRACKET RBRACKET ASSIGN LBRACE items RBRACE SEMICOLON
    (80) assignment_statement -> . RETURNTYPE IDENTIFIER LBRACKET RBRACKET ASSIGN NEW RETURNTYPE LBRACKET NUMBER RBRACKET SEMICOLON
    (81) assignment_statement -> . RETURNTYPE IDENTIFIER LBRACKET RBRACKET ASSIGN NEW RETURNTYPE LBRACKET RBRACKET SEMICOLON

    CLASS           shift and go to state 35
    RETURNTYPE      shift and go to state 38
    STATIC          shift and go to state 39
    IDENTIFIER      shift and go to state 36
    PLUS            shift and go to state 22
    MINUS           shift and go to state 23

    assignment_statement           shift and go to state 37

state 6
